<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_Tab">


    <EditText
        android:id="@+id/edtProfileUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/edtProfileUserNameHint"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/edtProfileUserNameHint"/>

    <EditText
        android:id="@+id/edtProfileUserBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/edtProfileUserBioHint"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtProfileUserName"
        android:autofillHints="@string/edtProfileUserBioHint"/>

    <EditText
        android:id="@+id/edtProfileUserProfession"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/edtProfileUserProfessionHint"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtProfileUserBio"
        android:autofillHints="@string/edtProfileUserProfessionHint"/>

    <EditText
        android:id="@+id/edtProfileUserHobbies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/edtProfileUserHobbieHint"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtProfileUserProfession"
        android:autofillHints="@string/edtProfileUserHobbieHint"/>

    <EditText
        android:id="@+id/edtProfileUserFavSong"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/edtProfileUserFavSongHint"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtProfileUserHobbies"
        android:autofillHints="@string/edtProfileUserFavSongHint"/>

    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:background="@color/primaryColor"
        android:padding="15dp"
        android:text="@string/btnProfileText"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtProfileUserFavSong" />

</androidx.constraintlayout.widget.ConstraintLayout>